# media-processing

./: .gitignore  pyproject.toml  ruff.toml
media_processing/: event_logging.py  markdown_from_pdf.py  markdown_to_slideshow.py  pdf_to_markdown.py  prompt.py  research_article.py  slideshow_from_markdown.py
media_processing/slideshow/: markdown_slide.py  slide_response.py
media_processing/slidesshow/: slide_response.py
media_processing/test/: test.md
media_processing/test/fixture/: main.md
media_processing/test/output/: output.md
src/media_processing/: markdown_from_pdf.py  mp3_from_tts.py  research_article.py  slideshow_from_markdown.py  test.py  transcribe.py
src/media_processing/slideshow/: markdown_slide.py  slide_response.py
