[project]
name = "media-processing"
authors = [{name = "gepz", email = "62634767+gepz@users.noreply.github.com"}]
requires-python = ">=3.12"
version = "0.1.0"
dependencies = [
    "datasets",
    "mdformat-simple-breaks>=0.0.1,<0.0.2",
    "mdformat-frontmatter>=2.0.8,<3",
    "realtimestt>=0.1.7,<0.2",
]

[project.optional-dependencies]
llama = [
    "llama-index>=0.12.23,<0.13",
    "llama-index-llms-anthropic>=0.6.10,<0.7",
    "llama-index-llms-openrouter>=0.3.1,<0.4",
    "llama-index-embeddings-huggingface>=0.5.2,<0.6",
    "llama-index-embeddings-voyageai>=0.3.5,<0.4",
]
marker = [
    "marker-pdf>=1.9.2,<2",
]


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.system-requirements]
cuda = "12.0"

[tool.pixi.project]
channels = ["nvidia", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]

[tool.pixi.pypi-dependencies]
media-processing = { path = ".", editable = true }

[tool.pixi.pypi-options]
index-url = "https://pypi.org/simple"
extra-index-urls = ["https://download.pytorch.org/whl/cu128"]


[tool.pixi.dependencies]
matplotlib = ">=3.10.0,<4"
scipy = ">=1.15.1,<2"
pandas = ">=2.3.2,<3"
pandas-stubs = ">=2.3.2.250827,<3"
nbformat = ">=5.10.4,<6"
ruff = ">=0.12.12,<0.13"
openai = ">=1.59.8,<2"
numpy = ">=1.26.4,<2"
seaborn = ">=0.13.2,<0.14"
yt-dlp = ">=2025.9.5,<2026"
ipykernel = ">=6.30.1,<7"
ipywidgets = ">=8.1.7,<9"
einops = ">=0.8.0"
treelib = ">=1.7.0"
scikit-posthocs = ">=0.11.4,<0.12"
typed-argument-parser = ">=1.11.0,<2"
pyarrow = ">=19.0.1,<20"
tokenizers = ">=0.21.0,<0.22"
rapidfuzz = ">=3.10.1,<4"
regex = ">=2024.11.6,<2025"
markdown-it-py = ">=3.0.0,<4"
mdformat = ">=0.7.21,<0.8"
more-itertools = ">=10.5.0,<11"
mdit-py-plugins = ">=0.4.2,<0.5"
stamina = ">=25.1.0,<26"
ffmpeg = ">=7.1.1,<8"
portaudio = ">=19.7.0,<20"

[tool.pixi.environments]
llama = { features = ["llama"], solve-group = "llama" }
marker = { features = ["marker"], solve-group = "marker" }

[tool.pixi.feature.llama.dependencies]
together = ">=1.5.25,<2"
